feat: Improve developer experience when using the mailto prop for multiple recipients

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "latest",
     "codecov": "latest",
     "eslint": "latest",
+    "is-email": "latest",
     "nuxt-edge": "latest",
     "standard-version": "latest"
   },
