--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "files": [
     "components"
   ],
-  "main": "module.js",
+  "main": "nuxt.js",
   "license": "MIT",
   "scripts": {
     "dev": "nuxt example --open",
