--- a/package.json
+++ b/package.json
@@ -1,38 +1,49 @@
 {
   "name": "nuxt-protected-mailto",
-  "version": "0.0.12",
+  "version": "1.0.0",
   "description": "Nuxt component to generate encoded mailto links",
   "repository": "mmoollllee/nuxt-protected-mailto",
-  "private": false,
-  "files": [
-    "components"
-  ],
-  "main": "nuxt.js",
   "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/types.d.ts",
+      "import": "./dist/module.mjs",
+      "require": "./dist/module.cjs"
+    }
+  },
+  "main": "./dist/module.cjs",
+  "types": "./dist/types.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "nuxt example --open",
-    "demo": "nuxt generate example",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup",
-    "lint": "eslint --ext .js,.vue example components",
-    "release": "standard-version && git push --follow-tags && npm publish"
+    "prepack": "nuxt-module-build build",
+    "dev": "nuxi dev playground",
+    "dev:build": "nuxi build playground",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
-    "is-email": "latest"
+    "is-email": "latest",
+    "@nuxt/kit": "^3.13.1"
   },
   "devDependencies": {
-    "@babel/core": "latest",
-    "@babel/eslint-parser": "latest",
-    "@babel/preset-env": "latest",
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "@nuxtjs/eslint-config": "latest",
-    "codecov": "latest",
-    "eslint": "latest",
-    "nuxt": "latest",
-    "push-dir": "latest",
-    "standard-version": "latest"
-  },
-  "publishConfig": {
-    "access": "public"
+    "@nuxt/devtools": "^1.4.2",
+    "@nuxt/eslint-config": "^0.5.6",
+    "@nuxt/module-builder": "^0.8.3",
+    "@nuxt/schema": "^3.13.1",
+    "@nuxt/test-utils": "^3.14.2",
+    "@types/node": "latest",
+    "changelogen": "^0.5.5",
+    "eslint": "^9.10.0",
+    "nuxt": "^3.13.0",
+    "typescript": "latest",
+    "vitest": "^2.0.5",
+    "vue-tsc": "^2.1.6"
   }
 }
