--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
-    "lint": "eslint .",
-    "test": "vitest run",
-    "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+    "release": "npm run lint && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
+    "lint": "eslint ."
   },
   "dependencies": {
     "is-email": "latest",
@@ -37,13 +34,11 @@
     "@nuxt/eslint-config": "^0.5.6",
     "@nuxt/module-builder": "^0.8.3",
     "@nuxt/schema": "^3.13.1",
-    "@nuxt/test-utils": "^3.14.2",
     "@types/node": "latest",
     "changelogen": "^0.5.5",
     "eslint": "^9.10.0",
     "nuxt": "^3.13.0",
     "typescript": "latest",
-    "vitest": "^2.0.5",
     "vue-tsc": "^2.1.6"
   }
 }
