--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-protected-mailto",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Nuxt component to generate encoded mailto links",
   "repository": "mmoollllee/nuxt-protected-mailto",
   "license": "MIT",
@@ -23,7 +23,7 @@
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "deploy": "nuxi generate playground && gh-pages -d playground/.output/public",
-    "release": "changelogen --release && npm publish && git push --follow-tags",
+    "release": "changelogen --major --release && npm publish && git push --follow-tags",
     "lint": "eslint ."
   },
   "dependencies": {
